@startuml erd
!include ../meta.puml
title: Entity relationship diagram

entity Project {
    + id [PK]
    --
    * name
    * created_at
}

entity Part {
    + id [PK]
    --
    * name
}

entity BOM {
    + project_id [FK]
    + part_id [FK]
    --
    * quantity
}

Project ||--|{ BOM
Part ||--o{ BOM


@enduml
